@@ -36,7 +36,7 @@ SVN::Notify:Filter::Markdown has the following dependencies:
 
 COPYRIGHT AND LICENCE
 
-Copyright (c) 2008 Kineticode, Inc. All Rights Reserved.
+Copyright (c) 2008 David Wheeler. Some Rights Reserved.
 
 This module is free software; you can redistribute it and/or modify it under
 the same terms as Perl itself.
